<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="196dp"
            android:layout_height="77dp"
            android:layout_marginBottom="28dp"
            android:text="@string/text_name"
            app:layout_constraintBottom_toTopOf="@+id/txtEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:layout_marginBottom="40dp"
            android:text="@string/email_address"
            app:layout_constraintBottom_toTopOf="@+id/txtId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtId"
            android:layout_width="179dp"
            android:layout_height="57dp"
            android:layout_marginBottom="48dp"
            android:text="@string/text_id"
            app:layout_constraintBottom_toTopOf="@+id/btnSignout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSignout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="132dp"
            android:text="@string/text_emailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="399dp"
            android:layout_height="167dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/txtName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>